--- a/src/Components/card2.module.scss
+++ b/src/Components/card2.module.scss
@@ -14,6 +14,7 @@ $rotation-speed: 2s;
     align-items: center;
     overflow: hidden;
     border-radius: 20px;
+    border: 1px solid rgb(73, 73, 73);
 
     &::after{
         content: '';
