random pokemon changing

--- a/src/Components/card2.module.scss
+++ b/src/Components/card2.module.scss
@@ -50,6 +50,8 @@ $rotation-speed: 2s;
         gap: 10px;
 
         img{
+            //width: 70%;
+            height: 50%;
             width: 70%;
         }
 
